--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,700|Prata" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" />
 
     <title>ClimaChange, Discover Climate Change Across the Globe</title>
@@ -18,35 +19,38 @@
 
 <body>
 
-    <header>
-        <div class="container">
+    <header class="header-home">
+        <div class="container ">
             <div class="row">
-                <div class="col my-5">
-                    <h1>ClimaChange</h1>
-                    <h2>Observe climate change across the world</h2>
+                <div class="col col-md-6 my-5 text-center">
+                    <h1>Things Change</h1>
+                    <h2>Observe satellite climate change</h2>
+                    <a href="#learnmore"><button class="btn btn-header" type="button" data-target="changesearch.html">Learn More</button></a>
                 </div>
             </div>
         </div>
     </header>
 
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-light navbar-expand-md fixed-top">
         <div class="container">
-            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#climaNavbar">
+            <a class="navbar-brand" href="#"><img src="img/ntw-logo.png" height="50" width="50" /></a>
+            <h2 class="my-auto">ClimaChange</h2>
+            <button class="navbar-toggler ml-auto" type="button" data-target="#ntwNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse align-right" id="climaNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-sm-6"></i> Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="changesearch.html"><i class="fa fa-search fa-sm"></i> Change Search</a></li>
-                    <li class="nav-item"><a class="nav-link" href="notablechanges.html"><i class="fa fa-pencil fa-sm"></i> Notable Changes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="faq.html"><i class="fa fa-question fa-sm"></i> FAQ</a></li>
+            <div class="collapse navbar-collapse" id="ntwNavbar">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Observe</a></li>
+                    <li class="nav-item"><a class="nav-link" href="notablechanges.html">The Why</a></li>
+                    <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <div class="">
-        <h2>Why Climate Change Matters</h2>
+        <h2 id="learnmore">Why Climate Change Matters</h2>
         <h3>Spreading Knowledge</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
