added info to index, changed styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>ClimaChange</title>
+    <title>NASA Warp</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700|Prata" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" />
 
-    <title>ClimaChange, Discover Climate Change Across the Globe</title>
+    <title>NASA Warp, Discover Climate Change Across the Globe</title>
 </head>
 
 <body>
@@ -22,10 +22,10 @@
     <header class="header-home">
         <div class="container ">
             <div class="row">
-                <div class="col col-md-6 my-5 text-center">
-                    <h1>Things Change</h1>
+                <div class="card col col-md-6 text-center">
+                    <h1>Times Are A Changin'</h1>
                     <h2>Observe satellite climate change</h2>
-                    <a href="#learnmore"><button class="btn btn-header" type="button" data-target="changesearch.html">Learn More</button></a>
+                    <a href="#learnMore"><button class="btn btn-header" type="button" data-target="changesearch.html">Learn More</button></a>
                 </div>
             </div>
         </div>
@@ -34,8 +34,8 @@
     <nav class="navbar navbar-light navbar-expand-md fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="img/ntw-logo.png" height="50" width="50" /></a>
-            <h2 class="my-auto">ClimaChange</h2>
-            <button class="navbar-toggler ml-auto" type="button" data-target="#ntwNavbar">
+            <h2 class="my-auto">NASA Warp</h2>
+            <button class="navbar-toggler ml-3" type="button" data-target="#ntwNavbar" data-toggle="collapse" aria-expanded="true"> 
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="ntwNavbar">
@@ -49,10 +49,38 @@
         </div>
     </nav>
 
-    <div class="">
-        <h2 id="learnmore">Why Climate Change Matters</h2>
-        <h3>Spreading Knowledge</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="container learn-content" id="learnMore">
+        <div class="row"></div>
+            <h1>Why Climate Change Matters</h1>
+            <h3>Spreading Knowledge</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div class="card-deck">
+                <div class="card">
+                <img class="card-img-top" src="img/issmountains.jpg" alt="Floods of Nebrasa">
+                <div class="card-body">
+                    <p class="card-text"><small class="text-muted">photo courtesy of NASA</small></p>
+                    <h5 class="card-title">Flooding</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                </div>
+                <div class="card">
+                <img class="card-img-top" src="/img/raikoke_erupts.jpg" alt="Hurricane Dorian">
+                <div class="card-body">
+                    <p class="card-text"><small class="text-muted">photo courtesy of NASA</small></p>
+                    <h5 class="card-title">Flooding</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                </div>
+                <div class="card">
+                <img class="card-img-top" src="/img/hurricaine_dorian.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <p class="card-text"><small class="text-muted">photo courtesy of NASA</small></p>
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div>
@@ -63,7 +91,7 @@
 
     <div>
         <h2>How it Works</h2>
-        <h3>ClimaChange Uses Up-to-Date Photos</h3>
+        <h3>NASA Warp Uses Up-to-Date Photos</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
 
