updated nav bar styling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="card col col-md-6 text-center">
                     <h1>Times Are A Changin'</h1>
                     <h2>Observe satellite climate change</h2>
-                    <a href="#learnMore"><button class="btn btn-header" type="button" data-target="changesearch.html">Learn More</button></a>
+                    <a href="#learnMore"><button class="btn btn-header col-6" type="button" data-target="changesearch.html">Learn More</button></a>
                 </div>
             </div>
         </div>
@@ -40,10 +40,10 @@
             </button>
             <div class="collapse navbar-collapse" id="ntwNavbar">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link acvtive font-weight-bold" href="#">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Observe</a></li>
-                    <li class="nav-item"><a class="nav-link" href="notablechanges.html">The Why</a></li>
-                    <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">The Why</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">FAQ</a></li>
                 </ul>
             </div>
         </div>
