improved learn card styling and added new section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <header class="header-home">
-        <div class="container ">
+        <div class="container">
             <div class="row">
                 <div class="card col col-md-6 text-center">
                     <h1>Times Are A Changin'</h1>
@@ -51,35 +51,42 @@
 
     <div class="container learn-content" id="learnMore">
         <div class="row"></div>
-            <h1>Why Climate Change Matters</h1>
+            <h1 class="d-inline-flex">Why Climate Change Matters</h1>
             <h3>Spreading Knowledge</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <div class="card-deck">
-                <div class="card">
-                <img class="card-img-top" src="img/issmountains.jpg" alt="Floods of Nebrasa">
+                <div class="card learn-card bg-inverse">
+                    <img class="card-img-top" src="img/issmountains.jpg" alt="Glacier Melting">
+                    <div class="card-img-overlay d-flex justify-text align-items-end">
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text"><small class="text-muted">photo courtesy of NASA</small></p>
+                        <h5 class="card-title">Glacial Melting</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                </div>
+                <div class="card learn-card">
+                    <img class="card-img-top" src="/img/raikoke_erupts.jpg" alt="Raikoke Erupting">
+                    <div class="card-body">
+                        <p class="card-text"><small class="text-muted">photo courtesy of NASA</small></p>
+                        <h5 class="card-title">Warming</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                </div>
+                <div class="card learn-card">
+                <img class="card-img-top" src="/img/hurricaine_dorian.jpg" alt="Hurricaine Dorian">
                 <div class="card-body">
                     <p class="card-text"><small class="text-muted">photo courtesy of NASA</small></p>
-                    <h5 class="card-title">Flooding</h5>
+                    <h5 class="card-title">Hurricanes</h5>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                </div>
-                </div>
-                <div class="card">
-                <img class="card-img-top" src="/img/raikoke_erupts.jpg" alt="Hurricane Dorian">
-                <div class="card-body">
-                    <p class="card-text"><small class="text-muted">photo courtesy of NASA</small></p>
-                    <h5 class="card-title">Flooding</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                </div>
-                </div>
-                <div class="card">
-                <img class="card-img-top" src="/img/hurricaine_dorian.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <p class="card-text"><small class="text-muted">photo courtesy of NASA</small></p>
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                 </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="mid-parallax">
+        <div class="row">
         </div>
     </div>
 
