--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>NASA Warp</title>
+    <title>NASA Satellite Comparison</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -11,125 +11,143 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,700|Prata" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" />
+    <!-- endbuild -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap">
 
-    <title>NASA Warp, Discover Climate Change Across the Globe</title>
+    <title>SatelliteDate, Discover Climate Change Across the Globe</title>
 </head>
 
 <body>
 
-    <header class="header-home">
-        <div class="container">
-            <div class="row">
-                <div class="card col col-md-6 text-center">
-                    <h1>Times Are A Changin'</h1>
-                    <h2>Observe satellite climate change</h2>
-                    <a href="#learnMore"><button class="btn btn-header col-6" type="button" data-target="changesearch.html">Learn More</button></a>
-                </div>
+  <nav class="navbar navbar-light navbar-expand-md fixed-top">
+      <div class="container">
+          <div class="row">
+              <div class="col">
+                <a class="navbar-brand" href="#"><h2 class="my-auto">SatelliteDate</h2></a>
+                <button class="navbar-toggler ml-3" type="button" data-target="#ntwNavbar" data-toggle="collapse" aria-expanded="true"> 
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              </div>
+          </div>
+          <div class="collapse navbar-collapse" id="ntwNavbar">
+              <ul class="navbar-nav ml-auto">
+                  <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                  <li class="nav-item"><a class="nav-link">Learn</a></li>
+                  <li class="nav-item"><a class="nav-link" href="observe.html">Observe</a></li>
+              </ul>
+          </div>
+      </div>
+  </nav>
+
+  <header>
+      <div id="headerslide" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#slide1" data-slide-to="0" class="active"></li>
+          <li data-target="#slide2" data-slide-to="1"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active" style="background-image: url('img/omaha_oli.jpg')">
+          <div class="carousel-caption d-none d-block">
+              <h2 class="display-1">Witness Change</h2>
+              <p class="lead">Compare two different dates and see changes on the surface of our planet</p>
+              <a class="btn btn-lg btn-primary" href="observe.html" type="button">Observe Now</a>
+          </div>
+        </div>
+        <div class="carousel-item" style="background-image: url('img/earth_at_night.jpg')">
+          <div class="carousel-caption d-none d-block">
+            <h2 class="display-1">Create a Better Future</h2>
+            <p class="lead">Learn more about environmental change</p>
+            <a class="btn btn-md btn-primary" href="#learnMore">Learn More</a>
+          </div>
+        </div>
+        </div>
+        <a class="carousel-control-prev" href="#headerslide" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#headerslide" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+        </a>
+      </div>
+  </header>
+
+  <div class="container learn-content" id="learnMore">
+    <div class="row">
+      <div class="col">
+        <h1 class="d-inline-flex">Learn</h1>
+        <h3>Updated Climate Change News</h3>
+        <div class="card-deck">
+            <div class="card">
+              <img class="card-img-top" src="img/landslide_card_header.jpg" alt="High Mountain Asia Landslide">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Climate Change Could Trigger More Landslides in High Mountain Asia</h5>
+                <p class="card-text">More frequent and intense rainfall events due to climate change could cause more landslides in the High Mountain Asia region of China, Tibet and Nepal, according to the first quantitative study of the link between precipitation and landslides in the region.</p>
+                <a href="https://climate.nasa.gov/news/2951/climate-change-could-trigger-more-landslides-in-high-mountain-asia/" class="btn btn-primary mt-auto">Read More</a>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">source: NASA</small>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="img/arctic_ice_melting_card.jpg" alt="Artctic Ice Melting">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Arctic Ice Melt Is Changing Ocean Currents</h5>
+                <p class="card-text">Using 12 years of satellite data, scientists have measured how this circular current, called the Beaufort Gyre, has precariously balanced an influx of unprecedented amounts of cold, fresh water — a change that could alter the currents in the Atlantic Ocean and cool the climate of Western Europe...</p>
+                <a href="https://climate.nasa.gov/news/2950/arctic-ice-melt-is-changing-ocean-currents/" class="btn btn-primary mt-auto">Read More</a>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">source: NASA</small>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="/img/surface_temperature_map_card.jpg" alt="Surface Temperature Map">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Study Confirms Climate Models are Getting Future Warming Projections Right</h5>
+                <p class="card-text">For decades, people have legitimately wondered how well climate models perform in predicting future climate conditions. Based on solid physics and the best understanding of the Earth system available, they skillfully reproduce observed data.</p>
+                <a href="https://climate.nasa.gov/news/2943/study-confirms-climate-models-are-getting-future-warming-projections-right/" class="btn btn-primary mt-auto">Read More</a>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">source: NASA</small>
+              </div>
             </div>
         </div>
-    </header>
-
-    <nav class="navbar navbar-light navbar-expand-md fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#"><img src="img/ntw-logo.png" height="50" width="50" /></a>
-            <h2 class="my-auto">NASA Warp</h2>
-            <button class="navbar-toggler ml-3" type="button" data-target="#ntwNavbar" data-toggle="collapse" aria-expanded="true"> 
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="ntwNavbar">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link acvtive font-weight-bold" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Observe</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">The Why</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">FAQ</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container learn-content" id="learnMore">
-        <div class="row"></div>
-            <h1 class="d-inline-flex">Why Climate Change Matters</h1>
-            <h3>Spreading Knowledge</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <div class="card-deck">
-                <div class="card learn-card bg-inverse">
-                    <img class="card-img-top" src="img/issmountains.jpg" alt="Glacier Melting">
-                    <div class="card-img-overlay d-flex justify-text align-items-end">
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text"><small class="text-muted">photo courtesy of NASA</small></p>
-                        <h5 class="card-title">Glacial Melting</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    </div>
-                </div>
-                <div class="card learn-card">
-                    <img class="card-img-top" src="/img/raikoke_erupts.jpg" alt="Raikoke Erupting">
-                    <div class="card-body">
-                        <p class="card-text"><small class="text-muted">photo courtesy of NASA</small></p>
-                        <h5 class="card-title">Warming</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    </div>
-                </div>
-                <div class="card learn-card">
-                <img class="card-img-top" src="/img/hurricaine_dorian.jpg" alt="Hurricaine Dorian">
-                <div class="card-body">
-                    <p class="card-text"><small class="text-muted">photo courtesy of NASA</small></p>
-                    <h5 class="card-title">Hurricanes</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                </div>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
+  </div>
 
-    <div class="mid-parallax">
-        <div class="row">
-        </div>
+<div class="modal fade" id="observeModal" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Modal title {{show.bs.modal}}</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
     </div>
+  </div>
+</div>
 
-    <div>
-        <h2>Change Happens</h2>
-        <h3>Portland</h3>
-        <img src="img/issmountains.jpg" alt="ISS Mountains">
-    </div>
-
-    <div>
-        <h2>How it Works</h2>
-        <h3>NASA Warp Uses Up-to-Date Photos</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-
-    <footer>
-        <div>
-            <h5>Links</h5>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Sites</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
-        <div>
-            <h5>Social</h5>
-            <a href="http://instagram.com/">Instagram</a>
-            <a href="http://facebook.com/">Facebook</a>
-            <a href="http://twitter.com/">Twitter</a>
-            <a href="http://youtube.com/">YouTube</a>
-        </div>
-        <div>
-            Tel: 1-206-555-1234<br />
-            Email: test@test.com
-        </div>
-    </footer>
-
-    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
-
+  <footer class="site-footer font-small">
+      <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <a href=""> ezratty.io</a>
+      </div>
+  </footer>
+  <!-- build:js js/main.js -->
+  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="js/scripts.js"></script>
+    <!-- endbuild -->
 </body>
 
 </html>
